@startuml
'https://plantuml.com/class-diagram
hide members
hide circle


package "commandsforcapcalculator" {
class AddNewModuleCommand
class ChangeSemesterViewCommand
class DeleteModuleCommand
class DisplayHelpCommand
class EditModuleCommand
class ExitCapCalculatorCommand
class PrintModuleListCommand
class ShowAllModulesCommand
class SuggestGoalCommand
class UpdateStudentSemesterCommand
}
package "parserforcapcalculator" #DDD {

ParserForCapCalculator --|> AddNewModuleCommand
ParserForCapCalculator --|> ChangeSemesterViewCommand
ParserForCapCalculator -left-|> DeleteModuleCommand
ParserForCapCalculator --|>DisplayHelpCommand
ParserForCapCalculator -left-|> EditModuleCommand
ParserForCapCalculator -left-|> ExitCapCalculatorCommand
ParserForCapCalculator -right-|> PrintModuleListCommand
ParserForCapCalculator -right-|> ShowAllModulesCommand
ParserForCapCalculator -right-|> SuggestGoalCommand
ParserForCapCalculator --|> UpdateStudentSemesterCommand

}


@enduml